--- a/Gandalf.css
+++ b/Gandalf.css
@@ -1,3 +1,5 @@
+/*mise en forme de la structure principale*/
+/*article est mis en z-index supérieur afin de définir la zone de hover pour la suite*/
 article{
 width: 200px;
 height: 200px;
@@ -5,7 +7,10 @@ margin: 0px;
 padding: 0px;
 position: relative;
 font-family: 'Roboto', sans-serif;
+z-index: 15;
 }
+
+/*mise en forme de chaque section en mode "normal"*/
 
 figure{
 margin: 0px;
@@ -20,6 +25,7 @@ width: 100%;
 height: 100%;
 position: absolute;
 opacity: 0.5;
+
 }
 
 figcaption{
@@ -33,6 +39,7 @@ border-radius: 10px;
 background: rgba(255, 255, 255, 0.8);
 margin-left: 15px;
 margin-top: 10px;
+z-index: 10;
 }
 
 .orange{
@@ -49,15 +56,12 @@ text-align: center;
 font-size: 35px;
 }
 
-img:hover{
-opacity: 1;
-}
-
-img:hover +figcaption{
+/*definition des modification de chasue balise en fonction du passage de la souris (hover)*/
+article:hover figcaption{
 opacity: 0;
 }
 
-figure:hover +h3{
+article:hover h3{
 width: 100%;
 margin: 0px ;
 padding-top: 80%;
@@ -67,15 +71,10 @@ text-align: center;
 font-size: 15px;
 }
 
-figure:hover +img{
+article:hover img{
 opacity: 1;
 }
 
-figcaption:hover {
+article:hover figcaption{
 opacity: 0;
 }
-
-.hover:hover +figcaption{
-opacity: 0;
-}
-
